--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="img/thumbnail.jpg">
 <meta property="og:url" content="http://mdriaz.ml">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="fontawesome-free-5.5.0-web/css/all.css">
   <link rel="stylesheet" href="css/main.css">
   <title>Welcome To My Portfolio</title>
