--- a/index.html
+++ b/index.html
@@ -1,245 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--  Essential META Tags -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--  Essential META Tags -->
+    <meta property="og:title" content="A Portfolio Site" />
+    <meta
+      property="og:description"
+      content="This is a personal portfolio single page website. Do a visit. Thank you."
+    />
+    <meta property="og:image" content="img/thumbnail.jpg" />
+    <meta property="og:url" content="http://mdriaz.ml" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="fontawesome-free-5.5.0-web/css/all.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Welcome To My Portfolio</title>
+  </head>
 
-<meta property="og:title" content="A Portfolio Site">
-<meta property="og:description" content="This is a personal portfolio single page website. Do a visit. Thank you.">
-<meta property="og:image" content="img/thumbnail.jpg">
-<meta property="og:url" content="http://mdriaz.ml">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="fontawesome-free-5.5.0-web/css/all.css">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Welcome To My Portfolio</title>
-</head>
-
-<body>
-  <header>
-    <div class="menu-btn">
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-    </div>
-
-    <nav class="menu">
-      <div class="menu-branding">
-        <div class="portrait"></div>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
       </div>
-      <ul class="menu-nav">
-        <li class="nav-item ">
-          <!-- current -->
-          <a href="#home" class="nav-link">
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#about" class="nav-link">
-            About Me
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#work" class="nav-link">
-            My Work
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#contact" class="nav-link">
-            Contact Me
-          </a>
-        </li>
-        <li class="nav-item">
-          <input id="change-theme" type="checkbox" class="nav-link">
-        </li>
-      </ul>
-    </nav>
-  </header>
 
-  <main id="home">
-    <div id="homesection">
-      <h1 class="lg-heading">
-        MD
-        <span class="text-secondary">Riaz</span>
-      </h1>
-      <h2 class="sm-heading">
-        Cartoonist, Web Designer, Programmer & Developer
-      </h2>
-      <div class="icons">
-        <a href="https://github.com/md-riaz">
-          <i class="fab fa-github fa-2x"></i>
-        </a>
-        <a href="https://www.facebook.com/mdriaz.official">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-linkedin fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item ">
+            <!-- current -->
+            <a href="#home" class="nav-link">
+              Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">
+              About Me
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#work" class="nav-link">
+              My Work
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">
+              Contact Me
+            </a>
+          </li>
+          <li class="nav-item">
+            <input id="change-theme" type="checkbox" class="nav-link" />
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="home">
+      <div id="homesection">
+        <h1 class="lg-heading">
+          MD
+          <span class="text-secondary">Riaz</span>
+        </h1>
+        <h2 class="sm-heading">
+          Cartoonist, Web Designer, Programmer & Developer
+        </h2>
+        <div class="icons">
+          <a href="https://github.com/md-riaz">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a href="https://www.facebook.com/mdriaz.official">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="#!">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="#!">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+        </div>
+        <span class="salam"
+          ><i class="fas fa-handshake"></i> As-salamu alaykum
+          <i class="fas fa-handshake"></i
+        ></span>
+        <span class="salam">Thank You For Visiting</span>
       </div>
-      <span class="salam"><i class="fas fa-handshake"></i> As-salamu alaykum <i class="fas fa-handshake"></i></span>
-      <span class="salam">Thank You For Visiting</span>
-    </div>
 
-    <hr>
-    <div id="about">
-      <h1 class="lg-heading">
-        About
-        <span class="text-secondary">Me😎</span>
-      </h1>
-      <h2 class="sm-heading">
-        Let me tell you a few things...
-      </h2>
+      <hr />
+      <div id="about">
+        <h1 class="lg-heading">
+          About
+          <span class="text-secondary">Me😎</span>
+        </h1>
+        <h2 class="sm-heading">
+          Let me tell you a few things...
+        </h2>
 
-      <div class="about-info">
-        <img src="img/portrait.jpg" alt="John Doe" class="bio-image">
+        <div class="about-info">
+          <img src="img/portrait.jpg" alt="John Doe" class="bio-image" />
 
-        <div class="bio">
-          <h3 class="text-secondary">BIO😃</h3>
-          <p>HI, My name is MD RIAZ. I am 20 years old. I read in Bogura Polytechnic Institute in Computer Technology.I
-            can turn your design into a static HTML website🙈🙈. I can also create vector portraits😁😁.
-          </p>
-        </div>
+          <div class="bio">
+            <h3 class="text-secondary">BIO😃</h3>
+            <p>
+              HI, My name is MD RIAZ. I am 20 years old. I read in Bogura
+              Polytechnic Institute in Computer Technology.I can turn your
+              design into a static HTML website🙈🙈. I can also create vector
+              portraits😁😁.
+            </p>
+          </div>
 
-        <div class="job job-1">
-          <h3>Computer Engineer</h3>
-          <h6>Bogura Polytechnic Institute</h6>
-          <p>I have Passed Diploma from Bogura Polytechnic Institute in 2020. It is No.1 Polytechnic Institute in bangladesh. </p>
-        </div>
+          <div class="job job-1">
+            <h3>Computer Engineer</h3>
+            <h6>Bogura Polytechnic Institute</h6>
+            <p>
+              I have Passed Diploma from Bogura Polytechnic Institute in 2020.
+              It is No.1 Polytechnic Institute in bangladesh.
+            </p>
+          </div>
 
-        <div class="job job-2">
-          <h3>Database Programming</h3>
-          <h6>Certified by BTEB</h6>
-          <p>A certificate by The Bangladesh Technical Education Board on Database programming for students.</p>
-        </div>
+          <div class="job job-2">
+            <h3>Database Programming</h3>
+            <h6>Certified by BTEB</h6>
+            <p>
+              A certificate by The Bangladesh Technical Education Board on
+              Database programming for students.
+            </p>
+          </div>
 
-        <div class="job job-3">
-          <h3>Computer operation</h3>
-          <h6>Certified by Govt.</h6>
-          <p>I have achived Computer Operation Level 1 Certificate. This is an International Certificate for students on computer basics & MS office Application. </p>
-        </div>
-      </div>
-    </div>
-    <hr>
-
-    <div id="work">
-      <h1 class="lg-heading">
-        My
-        <span class="text-secondary">Work😍</span>
-      </h1>
-      <h2 class="sm-heading">
-        Check out some of my projects...
-      </h2>
-      <div class="projects">
-        <div class="item">
-          <figure class="card-templet "><img src="img/projects/project1.jpg" alt="Project">
-            <figcaption>
-              <h3>Photobook </h3>
-              <p>Codded in HTML CSS </p>
-            </figcaption>
-          </figure>
-          <a href="https://md-riaz.github.io/photobook/" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/md-riaz/photobook" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <figure class="card-templet "><img src="img/projects/project2.jpg" alt="Project">
-            <figcaption>
-              <h3>DESIGN</h3>
-              <p>A Smart Looking Style Codded in HTML CSS </p>
-            </figcaption>
-          </figure>
-          <a href="https://md-riaz.github.io/design/" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/md-riaz/design" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <figure class="card-templet ">
-            <img src="img/projects/project3.jpg" alt="Project">
-            <figcaption>
-              <h3>e-congigure</h3>
-              <p>Stylis Design Codded in HTML CSS </p>
-            </figcaption>
-          </figure>
-          <a href="https://md-riaz.github.io/e-configure/" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/md-riaz/e-configure" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <figure class="card-templet "><img src="img/projects/project4.jpg" alt="Project">
-            <figcaption>
-              <h3>Learning </h3>
-              <p>Demo Page Codded in HTML CSS </p>
-            </figcaption>
-          </figure>
-          <a href="https://md-riaz.github.io/clgproject-1/" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/md-riaz/clgproject-1" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <figure class="card-templet "><img src="img/projects/project5.jpg" alt="Project">
-            <figcaption>
-              <h3>Collage Canteen </h3>
-              <p>Canteen info Codded in HTML CSS PHP</p>
-            </figcaption>
-          </figure>
-          <a href="http://bpi.mdriaz.ml" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/md-riaz/bpi-canteen" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
+          <div class="job job-3">
+            <h3>Computer operation</h3>
+            <h6>Certified by Govt.</h6>
+            <p>
+              I have achived Computer Operation Level 1 Certificate. This is an
+              International Certificate for students on computer basics & MS
+              office Application.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <hr>
-    <div id="contact">
-      <h1 class="lg-heading">
-        Contact
-        <span class="text-secondary">Me👂</span>
-      </h1>
-      <h2 class="sm-heading">
-        This is how you can reach me...
-      </h2>
-      <div class="boxes">
-        <div style="cursor: pointer;">
-          <a href="mailto:bpimdriaz@gmail.com?subject=Feedback about your site">
-            <span class="text-secondary">Email: </span> bpimdriaz@gmail.com
-          </a>
-        </div>
-        <div>
-          <a href="callto:01797810793"><span class="text-secondary">Phone: </span> +8801797-810793</a>
-        </div>
-        <div>
-          <span class="text-secondary">Address: </span> Krishnopur, Sherpur, Bogura
+      <hr />
+
+      <div id="work">
+        <h1 class="lg-heading">
+          My
+          <span class="text-secondary">Work😍</span>
+        </h1>
+        <h2 class="sm-heading">
+          Check out some of my projects...
+        </h2>
+        <div class="projects">
+          <div class="item">
+            <figure class="card-templet ">
+              <img src="img/projects/project1.jpg" alt="Project" />
+              <figcaption>
+                <h3>Photobook</h3>
+                <p>Codded in HTML CSS</p>
+              </figcaption>
+            </figure>
+            <a href="https://md-riaz.github.io/photobook/" class="btn-light">
+              <i class="fas fa-eye"></i> Project
+            </a>
+            <a href="https://github.com/md-riaz/photobook" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+          <div class="item">
+            <figure class="card-templet ">
+              <img src="img/projects/project2.jpg" alt="Project" />
+              <figcaption>
+                <h3>DESIGN</h3>
+                <p>A Smart Looking Style Codded in HTML CSS</p>
+              </figcaption>
+            </figure>
+            <a href="https://md-riaz.github.io/design/" class="btn-light">
+              <i class="fas fa-eye"></i> Project
+            </a>
+            <a href="https://github.com/md-riaz/design" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+          <div class="item">
+            <figure class="card-templet ">
+              <img src="img/projects/project3.jpg" alt="Project" />
+              <figcaption>
+                <h3>e-congigure</h3>
+                <p>Stylis Design Codded in HTML CSS</p>
+              </figcaption>
+            </figure>
+            <a href="https://md-riaz.github.io/e-configure/" class="btn-light">
+              <i class="fas fa-eye"></i> Project
+            </a>
+            <a href="https://github.com/md-riaz/e-configure" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+          <div class="item">
+            <figure class="card-templet ">
+              <img src="img/projects/project4.jpg" alt="Project" />
+              <figcaption>
+                <h3>Learning</h3>
+                <p>Demo Page Codded in HTML CSS</p>
+              </figcaption>
+            </figure>
+            <a href="https://md-riaz.github.io/clgproject-1/" class="btn-light">
+              <i class="fas fa-eye"></i> Project
+            </a>
+            <a href="https://github.com/md-riaz/clgproject-1" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+          <div class="item">
+            <figure class="card-templet ">
+              <img src="img/projects/project5.jpg" alt="Project" />
+              <figcaption>
+                <h3>Collage Canteen</h3>
+                <p>Canteen info Codded in HTML CSS PHP</p>
+              </figcaption>
+            </figure>
+            <a href="http://bpi.mdriaz.ml" class="btn-light">
+              <i class="fas fa-eye"></i> Project
+            </a>
+            <a href="https://github.com/md-riaz/bpi-canteen" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
         </div>
       </div>
-    </div>
+      <hr />
+      <div id="contact">
+        <h1 class="lg-heading">
+          Contact
+          <span class="text-secondary">Me👂</span>
+        </h1>
+        <h2 class="sm-heading">
+          This is how you can reach me...
+        </h2>
+        <div class="contact_form">
+          <form id="my_form" onsubmit="submitForm(); return false;">
+           <div class="name"> <input id="n" placeholder="Name" required /></div>
 
-  </main>
-  <footer id="main-footer">
-    Copyright &copy;
-    <script>
-      document.write(new Date().getFullYear());
-    </script>
-  </footer>
-  <script src="js/main.js"></script>
-</body>
+           <div class="email"><input id="e" placeholder="Email Address" type="email" /></div>
 
+            <div class="message"><textarea
+              id="m"
+              placeholder="Write your message here"
+              rows="2"
+              cols="50%"
+              required
+            ></textarea>
+          </div>
+
+            <input id="mybtn" type="submit" value="Submit Form" />
+            <span id="status"></span>
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer id="main-footer">
+      Copyright &copy;
+      <script>
+        document.write(new Date().getFullYear());
+      </script>
+    </footer>
+    <script src="js/main.js"></script>
+  </body>
 </html>
